--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-session": "^1.17.3",
     "nodemon": "^2.0.22",
     "pg": "^8.11.2",
-    "pool": "^0.4.1"
+    "pool": "^0.4.1",
+    "socket.io": "^4.7.2"
   }
 }
